--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Asteroids</string>
+    <string name="attribution_tag_app_data_storage_label">Storing app data like high scores</string>
     <string name="game_over">Game over. Total hits: %1$s</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="score">Score:</string>
